--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.7",
+    "@mui/material": "^6.1.7",
     "@svgr/webpack": "^8.1.0",
-    "framer-motion": "^11.3.21",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
     "next": "14.2.5",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
