--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
