--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@shadcn/ui": "^0.0.4",
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
@@ -20,6 +24,7 @@
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-tooltip": "^5.28.0",
