--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@radix-ui/react-toast": "^1.2.2",
+    "@react-google-maps/api": "^2.20.3",
     "@shadcn/ui": "^0.0.4",
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.11.17",
