--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-tooltip": "^5.28.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
