--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@shadcn/ui": "^0.0.4",
     "@svgr/webpack": "^8.1.0",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "next": "14.2.5",
